Finished a few bug fixes
